--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@nutui/nutui": "^3.1.22",
     "axios": "^0.27.2",
     "modern-css-reset": "^1.4.0",
