--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@nutui/nutui": "^3.1.22",
     "axios": "^0.27.2",
     "modern-css-reset": "^1.4.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
-    "vue-i18n": "^9.1.10",
+    "vue-i18n": "^9.2.0-beta.36",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
