--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-angular": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "consola": "^2.15.3",
+    "husky": "^8.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.9",
