fix(tsc): fix tsconfig options keys error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    },
-    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-    "references": [{ "path": "./tsconfig.node.json" }]
-  }
+    }
+  },
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
