--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "consola": "^2.15.3",
+    "fast-glob": "^3.2.11",
     "husky": "^8.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.9",
     "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.35.2"
   }
 }
