--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "modern-css-reset": "^1.4.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
+    "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^9.2.0-beta.36",
     "vue-router": "^4.0.16"
   },
