--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@nutui/nutui": "^3.1.22",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
     "modern-css-reset": "^1.4.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
