--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^3.2.25",
     "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^9.2.0-beta.36",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
