--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@nutui/nutui": "^3.1.22",
+    "@nutui/nutui": "^3.1.23-beta.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "modern-css-reset": "^1.4.0",
     "pinia": "^2.0.14",
-    "vue": "^3.2.25",
+    "vue": "^3.2.37",
     "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^9.2.0-beta.36",
     "vue-router": "^4.0.16",
@@ -34,7 +34,7 @@
     "husky": "^8.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
-    "vite": "^2.9.9",
+    "vite": "^2.9.13",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.35.2"
