--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "modern-css-reset": "^1.4.0",
+    "monaco-editor": "^0.33.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
     "vue-clipboard3": "^2.0.0",
@@ -35,6 +36,7 @@
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.13",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.35.2"
