--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,5 @@
 ENV = 'development'
 
 # 本地环境接口地址
-VITE_API_URL = 'http://192.168.1.19:3000'
+VITE_API_URL = 'http://192.168.3.3:3000'
+# VITE_API_URL = 'https://sub.store'
