--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@commitlint/config-angular": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@types/node": "^18.0.0",
+    "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "consola": "^2.15.3",
     "fast-glob": "^3.2.11",
     "husky": "^8.0.1",
     "sass": "^1.53.0",
+    "terser": "^5.14.1",
     "typescript": "^4.7.4",
+    "vconsole": "^3.14.6",
     "vite": "^2.9.13",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-style-import": "^2.0.0",
