--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@nutui/nutui": "^3.1.23-beta.1",
     "@vueuse/core": "^8.9.2",
+    "@vueuse/integrations": "^8.9.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "modern-css-reset": "^1.4.0",
     "monaco-editor": "^0.33.0",
     "pinia": "^2.0.14",
+    "qrcode": "^1.5.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.0-beta.36",
     "vue-router": "^4.0.16",
