--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@nutui/nutui": "^3.1.23-beta.1",
+    "@nutui/nutui": "^3.2.0",
     "@vueuse/core": "^8.9.2",
     "@vueuse/integrations": "^8.9.2",
     "axios": "^0.27.2",
