--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,8 +10,38 @@
   "display": "standalone",
   "icons": [
     {
+      "src": "48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "168x168.png",
+      "sizes": "168x168",
+      "type": "image/png"
+    },
+    {
       "src": "192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "256x256.png",
+      "sizes": "256x256",
       "type": "image/png"
     },
     {
