--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@vueuse/integrations": "^8.9.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "js-yaml": "^4.1.0",
+    "marked": "^7.0.4",
     "modern-css-reset": "^1.4.0",
     "monaco-editor": "^0.33.0",
     "pinia": "^2.0.14",
@@ -32,6 +34,7 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-angular": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-legacy": "^2.0.1",
     "@vitejs/plugin-vue": "^3.1.1",
