--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.40.2",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-angular": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
@@ -40,12 +41,15 @@
     "@vitejs/plugin-legacy": "^2.0.1",
     "@vitejs/plugin-vue": "^3.1.1",
     "consola": "^2.15.3",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "fast-glob": "^3.2.11",
     "husky": "^8.0.1",
     "sass": "^1.53.0",
-    "terser": "^5.14.1",
+    "terser": "^5.19.3",
     "typescript": "^4.7.4",
-    "vconsole": "^3.14.6",
+    "vconsole": "^3.15.1",
     "vite": "^3.2.7",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-pwa": "^0.16.4",
