--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
   "extends": [
-    "@antfu"
+    "@antfu",
+    "prettier"
   ],
   "plugins": [
-    "simple-import-sort"
+    "simple-import-sort",
+    "prettier"
   ],
   "rules": {
     "simple-import-sort/imports": "error",
@@ -27,6 +29,9 @@
     "@typescript-eslint/semi": [
       "error",
       "always"
-    ]
+    ],
+    "prettier/prettier": ["error", {
+      "htmlWhitespaceSensitivity": "ignore" // 根据显示样式决定 html 要不要折行
+    }]
   }
 }
