--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: "main"
+          ref: "master"
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
