--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
       - name: build
         run: |
           pnpm build
+      - name: zip
+        run: |
+          zip -r dist.zip dist
       - id: tag
         name: Generate release tag
         run: |
@@ -42,4 +45,4 @@ jobs:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           generate_release_notes: true
           files: |
-            dist/*
+            dist.zip
