--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.12.0",
+    "@codemirror/buildhelper": "^1.0.1",
+    "@codemirror/commands": "^6.3.3",
+    "@codemirror/lang-javascript": "github:keywos/codemirror-lang-javascript",
+    "@codemirror/language": "^6.10.1",
+    "@codemirror/search": "github:keywos/codemirror-search",
+    "@codemirror/state": "^6.4.0",
+    "@codemirror/view": "^6.23.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@lezer/highlight": "^1.2.0",
     "@nutui/nutui": "^3.3.8",
+    "@replit/codemirror-indentation-markers": "^6.5.0",
+    "@uiw/codemirror-extensions-hyper-link": "^4.21.21",
     "@vueuse/core": "^8.9.2",
     "@vueuse/integrations": "^8.9.2",
     "axios": "^0.27.2",
+    "codemirror": "^6.0.1",
     "dayjs": "^1.11.3",
+    "js-beautify": "^1.15.1",
     "js-yaml": "^4.1.0",
     "marked": "^7.0.4",
     "modern-css-reset": "^1.4.0",
