--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: "20"
       - name: Install dependencies
         run: |
           npm install -g pnpm
-          pnpm i
+          pnpm i --no-frozen-lockfile
       - name: build
         run: |
           pnpm build
