--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,18 @@ jobs:
         run: |
           SUB_STORE_RELEASE=`node --eval="process.stdout.write(require('./package.json').version)"`
           echo "release_tag=$SUB_STORE_RELEASE" >> $GITHUB_OUTPUT
+      - name: Prepare release
+        run: |
+          pnpm i -D conventional-changelog-cli
+          pnpm run changelog
       - name: Release
         uses: softprops/action-gh-release@v1
         if: ${{ success() }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          body_path: ./CHANGELOG.md
           tag_name: ${{ steps.tag.outputs.release_tag }}
-          generate_release_notes: true
+          # generate_release_notes: true
           files: |
             dist.zip
