--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "sub-store-front-end",
-  "version": "2.14.226",
+  "version": "2.14.228",
   "private": true,
   "scripts": {
     "dev": "vite --host",
     "dev:production": "vite --host --mode production",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "changelog": "conventional-changelog -p cli -i CHANGELOG.md -s"
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.12.0",
