chore(action): 将 vercel cli 版本更新到 48.9.0

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           vercel-org-id: ${{ secrets.ORG_ID}} # Required
           vercel-project-id: ${{ secrets.PROJECT_ID}} # Required
           working-directory: dist
+          vercel-version: '48.9.0'
       - name: zip
         run: |
           zip -r dist.zip dist
