--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
           # github-token: ${{ secrets.GITHUB_TOKEN }} # Optional
-          vercel-args: "--prod" # Optional
+          vercel-args: "--prod --debug" # Optional
           vercel-org-id: ${{ secrets.ORG_ID}} # Required
           vercel-project-id: ${{ secrets.PROJECT_ID}} # Required
           working-directory: dist
